Fixed issue where elements would overlap navbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
   /* text-align: center; */
   margin-top: 65px;
+  z-index: 1;
+  position: absolute;
 }
 
 .App-logo {
@@ -50,6 +52,7 @@
 body {
   padding: 0;
   font-family: 'Poppins', sans-serif;
+
 }
 
 
